--- a/maze.vcxproj
+++ b/maze.vcxproj
@@ -125,9 +125,17 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-  </ItemDefinitionGroup>
-  <ItemGroup>
+  </ItemDefinitionGroup>  <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="maze.cpp" />
+    <ClCompile Include="graphics.cpp" />
+    <ClCompile Include="pathfinder.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common.h" />
+    <ClInclude Include="maze.h" />
+    <ClInclude Include="graphics.h" />
+    <ClInclude Include="pathfinder.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
